# cell2specificity

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: tutorial.md
src/cell2specificity/: __init__.py
src/cell2specificity/annotation/: __init__.py
src/cell2specificity/annotation/models/: .gitkeep  Infection_atlas_T_CD8_annotation_level_3.pkl  Infection_atlas_annotation_level_3_final.pkl  paninfection_CD4_annotation_level_3.pkl  paninfection_CD8_annotation_level_3.pkl  paninfection_annotation_level_2.pkl
src/cell2specificity/epitope/: __init__.py
src/cell2specificity/hla/: __init__.py
src/cell2specificity/motif_based_inference/: __init__.py  _data.py  _predict.py
src/cell2specificity/motif_based_inference/data/: .gitkeep  disease_associated_motifs_hla.csv
src/cell2specificity/specificity/: _predict.py
src/cell2specificity/specificity/data/: df_motifs_with_hla.csv
src/cell2specificity/structural/: __init__.py  readme.md
src/cell2specificity/tcr_motifs/: __init__.py  _invariant.py  _matching.py  _preprocess.py
src/cell2specificity/utils/: __init__.py
tests/: test_specificity.py  test_tcr_motifs.py
tests/data/: toy_tcr_atlas.csv
